Bug 132367 - Skia: Crash with presenter console
Summary: Skia: Crash with presenter console
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0 target:7.2.0
Keywords: haveBacktrace
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-04-23 22:20 UTC by Regina Henschel
Modified: 2021-03-24 20:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File for testing (40.61 KB, application/vnd.oasis.opendocument.presentation)
2020-04-23 22:20 UTC, Regina Henschel
Details
VS 2019 Call Stack (6.12 KB, text/plain)
2020-04-23 22:21 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-04-23 22:20:16 UTC
Created attachment 159877 [details]
File for testing

Setup a two monitor environment with "Extended these displays" setting.
Enable presenter console.
Open attached document.
Start presentation e.g. by F5. => Crash.

The same file works without problems if presenter console is diasabled.

I use a debug-build Version: 7.0.0.0.alpha0+ (x64)
Build ID: 92b7e0fd668f580ca573284e8f36794c72ba62df
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

Error message in VS: Unhandled exception at 0x00007FF925E8DB8E (ucrtbase.dll) in soffice.bin: Fatal program exit requested. occurred
Comment 1 Regina Henschel 2020-04-23 22:21:40 UTC
Created attachment 159878 [details]
VS 2019 Call Stack
Comment 2 m_a_riosv 2020-04-24 10:46:30 UTC
Confirmed
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 151d95376a13907553032efc271fb0a7a27c9782
CPU threads: 4; OS: Windows 10.0 Build 19613; UI render: Skia/Raster; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL
Comment 3 m_a_riosv 2020-04-24 11:57:35 UTC
Hi, seems no issue with the latest.
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 951b6a9570ae2665f7b6e7cdd6d24d1fc513ba90
CPU threads: 4; OS: Windows 10.0 Build 19613; UI render: Skia/Raster; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL
Comment 4 Commit Notification 2020-04-24 14:08:09 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31b00fe0f469c1bda8e523441e20f6e36bc17fd1

make SkiaSalBitmap discard cached data of incorrect size (tdf#132367)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-04-28 10:46:43 UTC
@Regina, could you please confirm the issue is fixed with a recent daily build containing the fix ?
Comment 6 Regina Henschel 2020-04-28 12:01:14 UTC
Seen OK in Version: 7.0.0.0.alpha0+ (x64)
Build ID: 309569f7d1d144e7b1bcaa0211f04e9b26b9f2fd
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL
Comment 7 Commit Notification 2021-03-24 20:10:40 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b9eca45f56bbb8bf0acf25469e9f5a9918584e4e

add a unittest for tdf#132367

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.